--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2018"
 
 [dependencies]
 sdl2 = { version = "0.34.1", features = ["bundled", "static-link"] }
+log = "0.4"
+env_logger = "0.7.1"
+getrandom = "0.1.14"
