--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: rust
+os:
+  - linux
+  - osx
+  - windows
+
 rust:
   - stable
-  - beta
-  - nightly
 jobs:
-  allow_failures:
-    - rust: nightly
   fast_finish: true
 
 cache: cargo
