--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -20,6 +20,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      
+      
+      - name: Setup VS (Windows)
+        run: microsoft/setup-msbuild@v1.1
+        if: matrix.os == 'windows-latest'
 
       - uses: actions-rs/cargo@v1
         with:
