--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -23,7 +23,7 @@ jobs:
       
       
       - name: Setup VS (Windows)
-        run: microsoft/setup-msbuild@v1.1
+        uses: microsoft/setup-msbuild@v1.1
         if: matrix.os == 'windows-latest'
 
       - uses: actions-rs/cargo@v1
